--- a/LVTN/app/src/main/AndroidManifest.xml
+++ b/LVTN/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/MyMaterialTheme">
+        android:theme="@style/AppTheme">
         <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.activity.RowTrip" />
+        <activity android:name=".ui.activity.RowAttributeUser" />
+        <activity android:name=".ui.activity.InformationUser" />
         <service
             android:name=".service.internal.TrackingService"
             android:enabled="true"
