--- a/LVTN/app/build.gradle
+++ b/LVTN/app/build.gradle
@@ -49,7 +49,9 @@ dependencies {
     compile 'org.osmdroid:osmdroid-android:5.1@aar'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.github.MKergall.osmbonuspack:OSMBonusPack:v5.7'
-    compile 'com.google.android.exoplayer:exoplayer:r2.0.4'
+    compile 'com.devbrackets.android:exomedia:3.0.5'
+    compile 'com.devbrackets.android:playlistcore:1.1.1'
+    compile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
     compile 'com.github.satyan:sugar:1.5'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
