--- a/LVTN/app/src/main/AndroidManifest.xml
+++ b/LVTN/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cse.hcmut.edu.vn.tripmaster">
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -22,16 +23,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ui.activity.RowTrip" />
         <activity android:name=".ui.activity.RowAttributeUser" />
         <activity android:name=".ui.activity.InformationUser" />
+
         <service
             android:name=".service.internal.TrackingService"
             android:enabled="true"
             android:exported="false" />
 
-        <!--SUGAR ORM DATABASE CONFIGURE-->
+        <!-- SUGAR ORM DATABASE CONFIGURE -->
         <meta-data
             android:name="DATABASE"
             android:value="TripMaster.db" />
@@ -44,10 +45,11 @@
         <meta-data
             android:name="DOMAIN_PACKAGE_NAME"
             android:value="cse.hcmut.edu.vn.tripmaster" />
-
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="59da65b734f591a9e856121b6650b98659408ce3"  />
+            android:value="59da65b734f591a9e856121b6650b98659408ce3" />
+
+        <activity android:name=".ui.activity.VideoView"></activity>
     </application>
 
 </manifest>
