--- a/LVTN/app/build.gradle
+++ b/LVTN/app/build.gradle
@@ -42,10 +42,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
+        transitive = true;
+    }
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
-
     compile 'org.osmdroid:osmdroid-android:5.1@aar'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.github.MKergall.osmbonuspack:OSMBonusPack:v5.7'
@@ -53,8 +56,6 @@ dependencies {
     compile 'com.devbrackets.android:playlistcore:1.1.1'
     compile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
     compile 'com.github.satyan:sugar:1.5'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
-        transitive = true;
-    }
+    compile 'com.google.android.gms:play-services:9.4.0'
     testCompile 'junit:junit:4.12'
 }
