--- a/LVTN/app/build.gradle
+++ b/LVTN/app/build.gradle
@@ -16,6 +16,7 @@ apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+
 }
 
 android {
@@ -33,21 +34,22 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debug {
+                debuggable true
+            }
         }
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
 
     compile 'org.osmdroid:osmdroid-android:5.1@aar'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.google.android.exoplayer:exoplayer:r1.5.7'
     compile 'com.github.MKergall.osmbonuspack:OSMBonusPack:v5.7'
     compile 'com.github.satyan:sugar:1.5'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
