--- a/LVTN/app/build.gradle
+++ b/LVTN/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile 'org.osmdroid:osmdroid-android:5.1@aar'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'com.github.MKergall.osmbonuspack:OSMBonusPack:v5.7'
-
+    compile 'com.google.code.gson:gson:2.4'
     compile 'com.google.android.exoplayer:exoplayer:r1.5.7'
 
     compile 'com.github.satyan:sugar:1.5'
