--- a/LVTN/app/src/main/AndroidManifest.xml
+++ b/LVTN/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
     <uses-permission android:name="cse.hcmut.edu.vn.tripmaster.permission.MAPS_RECEIVE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <!--  -->
     <application
         android:allowBackup="true"
@@ -36,7 +41,8 @@
         <activity android:name=".ui.activity.RowTrip" />
         <activity android:name=".ui.activity.RowAttributeUser" />
         <activity android:name=".ui.activity.InformationUser" />
-        <activity android:name=".ui.activity.VideoPlayer"></activity>
+        <activity android:name=".ui.activity.VideoPlayer" />
+
         <service
             android:name=".service.internal.TrackingService"
             android:enabled="true"
@@ -75,8 +81,13 @@
 
         <activity
             android:name=".ui.activity.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".ui.activity.RowVideo"></activity>
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".ui.activity.RowVideo" />
+        <activity
+            android:name=".ui.activity.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:theme="@style/AppTheme.Dark" />
+        <activity android:name=".ui.activity.SignupActivity"></activity>
     </application>
 
 </manifest>
